*********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

XXth October 2008 - FreeRapid Downloader 0.7 released
  Added : plugins - support for xtraupload.de [implemented by Lukiz]
  Added : slovak translation [thanks to dDwarf!] 
  Added : autobackup files (filelist.xml, history.xml)  
  Added : new download state WAIT! to show to user "you have to wait XX minutes"
  Added : table scrolls to new position of selection [requested by Pavel]
  Added : options to control confirmation dialogs 
  Added : option to disable history
  Added : buttons to create desktop, start menu, quick launch, start up shortcuts;
          Linux/MacOS users can configure syscmd.properties file
  Added : autoshutdown options - standby, hibernate, reboot, shutdown, quit when all downloads complete; 
          Linux/MacOS users can configure syscmd.properties file
  Added : command line option to reset application properties (--reset)
  Changed : remapped selection shortcuts - HOME-first row , END-last row, ctrl+HOME-first column, ctrl+END-last column
  Changed : removed heap memory indicator
  Changed : updated czech translation
  Changed : plugin file names renamed - version info removed
  Fixed : NewLinks dialog - pressed ENTER caused calling insert action twice  
  Fixed : fixed renaming file with many dots in its name
  Fixed : exception when target disk space has not enough space 
  Fixed : shift+DELETE shortcut does not work in History dialog
  Fixed : PAUSED state sometimes runs another download


8th October 2008 - FreeRapid Downloader 0.65 released
  Added : plugins - support for letibit.com [FS#25 - requested by Chris C., implemented by Lukiz] 
  Added : plugins - support for egoshare.com, share-online.biz, easy-share.com [implemented by Lukiz]